# CodeIndexer

./: .env.example  .gitignore  README.md  USAGE_GUIDE.md  check_cgc_db.py  pyproject.toml  verify_cgc_benchmark.py
docs/: ROADMAP.md
src/code_indexer/: __init__.py  __main__.py
src/code_indexer/api/: __init__.py  comparison.py  diff_impact.py  metrics.py  server.py
src/code_indexer/cache/: cache_manager.py
src/code_indexer/cli/: __init__.py  cli_app.py
src/code_indexer/compression/: __init__.py  compressor.py
src/code_indexer/config/: settings.py
src/code_indexer/enrichment/: __init__.py  description_generator.py
src/code_indexer/evaluator/: benchmarker.py  cgc_connector.py  metrics.py
src/code_indexer/graph/: graph_queries.py  graph_queries_networkx.py  neo4j_store.py  networkx_store.py
src/code_indexer/parsing/: __init__.py  ast_parser.py  code_splitter.py  language_detector.py  models.py
src/code_indexer/pipeline/: __init__.py  file_watcher.py  git_cloner.py  indexer.py
src/code_indexer/rag/: __init__.py  agent.py
src/code_indexer/search/: __init__.py  bm25_index.py  hybrid_search.py  reranker.py
src/code_indexer/vectors/: encoder.py  milvus_store.py
tests/: test_parsing.py
ui/: app.py
vscode-extension/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json
vscode-extension/scripts/: bundle-python.js
vscode-extension/src/: extension.ts  mcp-server.ts  python-server.ts  python-setup.ts
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/pages/: ChatPage.jsx  ComparePage.jsx  DashboardPage.jsx  IndexPage.jsx  ReposPage.jsx
